force-app/main/default/objects/Contact/fields/Active_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscriptions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Active Subscriptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>