force-app/main/default/objects/Contact/fields/ActivityCount__c.field-meta.xml
<CustomField>
    <fullName>ActivityCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ActivityCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>