force-app/main/default/objects/Contact/fields/AllowComplimentaryOrders__c.field-meta.xml
<CustomField>
    <fullName>AllowComplimentaryOrders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllowComplimentaryOrders</label>
    <type>Checkbox</type>
</CustomField>