force-app/main/default/objects/Contact/fields/API_Id__c.field-meta.xml
<CustomField>
    <fullName>API_Id__c</fullName>
    <externalId>true</externalId>
    <label>API Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>