force-app/main/default/objects/Contact/fields/Appointment_Link__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Link__c</fullName>
    <formula>IF( NOT(ISBLANK(UUID__c )) ,
( $Label.GuestSiteLink + &quot;/Calendar?memberuuid=&quot; + UUID__c + &quot; &quot;) , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Link</label>
    <type>Text</type>
</CustomField>