force-app/main/default/objects/Contact/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Balance</label>
    <summarizedField>Balance_Transaction__c.Amount_Signed__c</summarizedField>
    <summaryForeignKey>Balance_Transaction__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>