force-app/main/default/objects/Contact/fields/Card_Update_Link__c.field-meta.xml
<CustomField>
    <fullName>Card_Update_Link__c</fullName>
    <formula>IF( NOT( ISBLANK( UUID__c ) ) , $Label.GuestUserCardUpdateLink &amp; UUID__c  + &quot; &quot;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Update Link</label>
    <type>Text</type>
</CustomField>