force-app/main/default/objects/Contact/fields/Formatted_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Phone_Number__c</fullName>
    <label>Formatted Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>