force-app/main/default/objects/Contact/fields/GDriveSync__c.field-meta.xml
<CustomField>
    <fullName>GDriveSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDriveSync</label>
    <type>Checkbox</type>
</CustomField>