force-app/main/default/objects/Contact/fields/Gsheetsync__c.field-meta.xml
<CustomField>
    <fullName>Gsheetsync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gsheetsync</label>
    <type>Checkbox</type>
</CustomField>