force-app/main/default/objects/Contact/fields/Guest_Member_Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>Guest_Member_Valid_Till__c</fullName>
    <defaultValue>NOW() + 10</defaultValue>
    <label>Guest Member Valid Till</label>
    <type>DateTime</type>
</CustomField>