force-app/main/default/objects/Contact/fields/hasUnreadMessages__c.field-meta.xml
<CustomField>
    <fullName>hasUnreadMessages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasUnreadMessages</label>
    <type>Checkbox</type>
</CustomField>