force-app/main/default/objects/Contact/fields/Is_Ambiguity__c.field-meta.xml
<CustomField>
    <fullName>Is_Ambiguity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ambiguity</label>
    <type>Checkbox</type>
</CustomField>