force-app/main/default/objects/Contact/fields/IsUserDeactivated__c.field-meta.xml
<CustomField>
    <fullName>IsUserDeactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUserDeactivated</label>
    <type>Checkbox</type>
</CustomField>