force-app/main/default/objects/Contact/fields/Link_Expired__c.field-meta.xml
<CustomField>
    <fullName>Link_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Link Expired</label>
    <type>Checkbox</type>
</CustomField>