force-app/main/default/objects/Contact/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <label>MaritalStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Unreported</fullName>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Single</fullName>
                <label>Unmarried</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>