force-app/main/default/objects/Contact/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <defaultValue>&apos;Subscriber&apos;</defaultValue>
    <description>Guest Member was a one-time Member without monthly membership fees they can create order for one time later they have to pay membership fees</description>
    <inlineHelpText>Guest Member was a one-time Member without monthly membership fees</inlineHelpText>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Subscriber</fullName>
                <default>true</default>
                <label>Subscriber</label>
            </value>
            <value>
                <fullName>Anonymous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>