force-app/main/default/objects/Contact/fields/Payment_SMS_Sent__c.field-meta.xml
<CustomField>
    <fullName>Payment_SMS_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment SMS Sent</label>
    <type>Checkbox</type>
</CustomField>