force-app/main/default/objects/Contact/fields/PHLO_Id__c.field-meta.xml
<CustomField>
    <fullName>PHLO_Id__c</fullName>
    <label>PHLO Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>