force-app/main/default/objects/Contact/fields/PHLOFromPhone__c.field-meta.xml
<CustomField>
    <fullName>PHLOFromPhone__c</fullName>
    <formula>$User.Formatted_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current Loggedin User Phone</inlineHelpText>
    <label>Sales Rep Phone</label>
    <type>Text</type>
</CustomField>