force-app/main/default/objects/Contact/fields/SpreadSheet__c.field-meta.xml
<CustomField>
    <fullName>SpreadSheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SpreadSheet</label>
    <referenceTo>SpreadSheet__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>