force-app/main/default/objects/Contact/fields/SpreadSheet_Id__c.field-meta.xml
<CustomField>
    <fullName>SpreadSheet_Id__c</fullName>
    <formula>SpreadSheet__r.SpreadSheet_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpreadSheet Id</label>
    <type>Text</type>
</CustomField>