force-app/main/default/objects/Contact/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Appointment Scheduled</fullName>
            </value>
            <value>
                <fullName>Appointment No Show</fullName>
            </value>
            <value>
                <fullName>Appointment Completed</fullName>
            </value>
            <value>
                <fullName>Active Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>