force-app/main/default/objects/Contact/fields/Subscribed_Products_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_Products_Catalog__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Subscribed Products Catalogue Applicable to Individual Members</description>
    <inlineHelpText>Subscribed Products Catalogue Applicable to Individual Members</inlineHelpText>
    <label>Subscribed Products Catalog</label>
    <referenceTo>Catalog__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>