force-app/main/default/objects/Contact/fields/Total_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Total_Subscriptions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Subscriptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>