force-app/main/default/objects/Contact/fields/UnreadActivitiesCount__c.field-meta.xml
<CustomField>
    <fullName>UnreadActivitiesCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>UnreadActivitiesCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>