force-app/main/default/objects/Contact/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>