force-app/main/default/objects/Contact/listViews/All_PMA_Members.listView-meta.xml
<ListView>
    <fullName>All_PMA_Members</fullName>
    <columns>FULL_NAME</columns>
    <columns>Phone_Number__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Active__c</columns>
    <columns>Member_Type__c</columns>
    <columns>Point_of_Contact__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Member</value>
    </filters>
    <filters>
        <field>ACCOUNT.ACCOUNT_ID</field>
        <operation>equals</operation>
        <value>0019B0000033lFX</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Member_Type__c</field>
        <operation>equals</operation>
        <value>Subscriber</value>
    </filters>
    <label>All PMA Active Members</label>
</ListView>